Fixes word wrap in error snackbar

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -35,4 +35,6 @@ body {
   padding: 0 12px;
 }
 
-
+.cdk-global-overlay-wrapper {
+  word-break: break-all;
+}
